# termstage

./: .gitignore  CHANGELOG.md  README.md  demo.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: data-cli.yaml  demo.yaml  git-tool.yaml  git-workflow.yaml  http-client.yaml  termstage-demo.yaml
src/termstage/: __init__.py  animator.py  cli.py  renderer.py  themes.py
src/termstage/templates/: starter.yaml
src/termsvg/: __init__.py  animator.py  cli.py  renderer.py  themes.py
tests/: test_termstage.py
