[project]
name = "termstage"
version = "0.4.5"
description = "Fake terminal demos. YAML in, SVG out. No recording."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
]

[project.scripts]
termstage = "termstage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/termstage"]

[tool.uv.sources]
# nothing needed

[dependency-groups]
dev = ["pytest>=8.0"]
